syntax = "proto3";

package helloWorld;

option go_package = "github.com/kngnkg/tunetrail/api/gen/go/hello_world";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
